--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,4 +1,4 @@
-.fill {
+.btn {
   padding: 15px 25px;
   border: unset;
   border-radius: 15px;
@@ -14,7 +14,7 @@
   overflow: hidden;
 }
 
-button::before {
+.btn::before {
   content: "";
   position: absolute;
   top: 0;
@@ -29,10 +29,47 @@ button::before {
   transition: all 250ms;
 }
 
-button:hover {
+.btn:hover {
   color: #e8e8e8;
 }
 
-button:hover::before {
+.btn:hover::before {
+  width: 100%;
+}
+.fill {
+  padding: 15px 25px;
+  border: unset;
+  border-radius: 15px;
+  color: #e8e8e8;
+  z-index: 1;
+  background: #212121;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms;
+  overflow: hidden;
+}
+.fill::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #e8e8e8;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0, 0, 0, 0.27);
+  transition: all 250ms;
+}
+
+.fill:hover {
+  color: #212121;
+}
+
+.fill:hover::before {
   width: 100%;
 }
